--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     },
     "dependencies": {
         "element-plus": "^2.6.1",
-        "flowbite": "^2.3.0"
+        "flowbite": "^2.3.0",
+        "vue-sweetalert2": "^5.0.5",
+        "vue3-toastify": "^0.2.1"
     }
 }
